# Diploma---Coding-theory

./: CMakeLists.txt  bch.txt  main.cpp  matrix.txt  matrix2.txt  matrix3.txt  matrix4.txt
binary_array/: binary_array.cpp  binary_array.h
diviser/: diviser.cpp  diviser.h
matrix/: matrix.cpp  matrix.h
permutations/: permuatations.cpp  permuatations.h  permutations.cpp  permutations.h
span_form/: span_form.cpp  span_form.h
