cmake_minimum_required(VERSION 3.15)
project(DiplomaProjectSpanForm)

set(CMAKE_CXX_STANDARD 14)

add_executable(DiplomaProjectSpanForm main.cpp binary_array/binary_array.cpp binary_array/binary_array.h matrix/matrix.h matrix/matrix.cpp span_form/span_form.cpp span_form/span_form.h diviser/diviser.cpp diviser/diviser.h permutations/permutations.cpp permutations/permutations.h)